trying to correct border raius on IOS try 5

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ overflow-y: scroll;
 border-top-right-radius: 40px;
 border-top-left-radius:40px;
 border-collapse : separate;
+height: 75vh;
 }
 h1 {
     margin-top: 1rem;
@@ -43,6 +44,8 @@ html {
       background: transparent; /* make scrollbar transparent */
   }
 
+
+//   boutons, couleurs et liens
 a {
     text-decoration: none;
     color: rgb(75, 6, 49);
@@ -50,6 +53,13 @@ a {
 a:hover{
     color: rgb(24, 119, 122);
 }
+
+.bouton-arondi{
+    border-collapse: separate;
+
+}
+
+
 .fond-sombre{
     background-color:rgb(75, 6, 49);
     color: white;
